# Palantir-foundry-decision-platform1

./: .gitignore  CLAUDE.md  PLAN.md  README.md  build_journey.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/core/: config.py  errors.py
backend/db/: init_db.py  queries.py
backend/models/: brief.py  decision.py  ontology.py
backend/routers/: decisionroom.py  missionbrief.py  opsgraph.py
backend/services/: ai_brief.py  ai_decision.py  ai_opsgraph.py
demo/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/api/: client.js
frontend/src/components/decisionroom/: ConstraintEditor.jsx  DecisionRoomView.jsx  RecommendationCard.jsx  ScenarioPanel.jsx
frontend/src/components/missionbrief/: ActionApproval.jsx  BriefingPanel.jsx  MissionBriefView.jsx  RoleSelector.jsx
frontend/src/components/opsgraph/: DependencyGraph.jsx  ImpactSummary.jsx  ObjectPanel.jsx  OpsGraphView.jsx
frontend/src/components/shared/: ConfidenceFlag.jsx  ExceptionBadge.jsx  ModelTag.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/styles/: tokens.css
